--- a/code/test_9.11or9.9.ipynb
+++ b/code/test_9.11or9.9.ipynb
@@ -24,6 +24,7 @@
    "outputs": [],
    "source": [
     "def get_completions(system_prompt, user_prompt, max_tokens_=32):\n",
+    "\n",
     "    client = OpenAI(\n",
     "        api_key=\"sk-your_api_key************************************************\",\n",
     "        base_url=\"https://api.openai.com/v1\",\n",
@@ -40,8 +41,7 @@
     "        temperature=0,\n",
     "        seed=42,\n",
     "        max_tokens=max_tokens_,\n",
-    "        logprobs=True,\n",
-    "        top_logprobs=3,\n",
+    "        logprobs=False,\n",
     "        presence_penalty=0,\n",
     "        frequency_penalty=0,\n",
     "    )\n",
@@ -62,7 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OpenAI Python API Library Version: 1.56.1\n"
+      "OpenAI Python API Library Version: 1.58.1\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
     }
    ],
    "source": [
-    "# 对话的情景化和好的提示至关重要：\n",
+    "# 交互的情景化和好的提示至关重要：\n",
     "system_ = \"You are an expert in mathematical analysis and highly skilled in numerical comparisons.\"\n",
     "\n",
     "prompt2 = \"9.11 or 9.9, which is greater?\"\n",
@@ -158,19 +158,16 @@
       "2. **Compare the first decimal place**: \n",
       "   - For 9.11, the first decimal place is 1.\n",
       "   - For 9.9, the first decimal place is 9.\n",
-      "   - Since 9 is greater than 1, we can conclude that 9.9 is greater in this comparison.\n",
+      "   - Since 1 is less than 9, 9.9 is greater than 9.11.\n",
       "\n",
-      "3. **Conclusion**: \n",
-      "Since the comparison of the decimal parts shows that 9.9 is greater than 9.11, the greater number is 9.9.\n",
-      "\n",
-      "So, 9.9 is greater than 9.11.\n"
+      "3. **Conclusion**: Therefore, 9.9 is greater than 9.11.\n"
      ]
     }
    ],
    "source": [
     "system_ = \"You are an expert at world knowledge.\"\n",
     "\n",
-    "# Zero-shot CoT (Chain-of-Thought)\n",
+    "# Zero-shot CoT (Chain-of-Thought):\n",
     "prompt3 = \"9.11 or 9.9, which is greater?\\nLet's think step by step.\"\n",
     "result3 = get_completions(system_, prompt3, max_tokens_=256)\n",
     "print(result3)"
